# py-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: main.py  pylintrc  pyproject.toml
{{ cookiecutter.project_slug }}/scripts/: example_script.py
{{ cookiecutter.project_slug }}/tests/: bake_test.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __main__.py  cli.py
