[tool.poetry]
name = "py-template"
version = "0.1.0"
description = "python project template"
authors = ["Ian Chen <ianre657@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.1.0"
isort = "^5.10.1"
poethepoet = "^0.16.2"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[tool.poe.env]
SRC = "hooks"

[tool.poe.tasks.better]
help = "Remove unused imports & sort existing imports"
sequence = [
  # remove unused import
  { cmd = "autoflake --in-place --remove-unused-variables --remove-all-unused-imports --ignore-init-module-imports -r ${SRC}" },
  # sort import
  { cmd = "isort ${SRC}" },
  # format code
  { cmd = "black ${SRC}" },
]

[tool.poe.tasks]
test = { cmd = "pytest -vv ${SRC}", help= "Run test"}
lint = {cmd = "pylint ${SRC}", help= "Lint code"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
