[tool.poetry]
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
description = ""
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.scripts]
app = "{{ cookiecutter.project_slug }}.__main__:app"

[tool.poe.env]
SRC = "{{ cookiecutter.project_slug }} scripts tests"


[tool.poe.tasks.better]
help = "Remove unused imports & sort existing imports"

sequence = [
    # remove unused import
    { cmd = "autoflake --in-place --remove-unused-variables --remove-all-unused-imports --ignore-init-module-imports -r ${SRC}" },
    # sort import
    { cmd = "isort ${SRC}" },
    # format code
    { cmd = "black ${SRC}" },
]

[tool.poe.tasks]
run = { cmd = "poetry run app", help = "Start app" }
test = { cmd = "pytest --verbose", help = "Run pytest" }
lint = { cmd = "ruff ${SRC}", help = "Run ruff to check project" }


[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
